(lang dune 2.0)

; Before changing the dune version, make sure that the new version
; is supported by most popular operating systems, for example
; Ubuntu 22.04 LTS.

(name gcc2cryptoline)

(generate_opam_files true)
(license MIT)
(authors "fmlab-iis")
(maintainers "fmlab-iis")

(package
  (name gcc2cryptoline)
  (synopsis "GCC gimple to CryptoLine Translator")
  (homepage https://github.com/fmlab-iis/gcc2cryptoline)
  (depends
    num
    zarith
  )
)
